projeto bootstrap5-2021 - cores e opacidades

--- a/bootstrap5-2021/aula11/index.html
+++ b/bootstrap5-2021/aula11/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <h1>cores e opacidade</h1>
-        <p class="bg-primary">
+        <p class="bg-primary bg-gradient">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur possimus eos unde cumque rem ipsum suscipit libero eveniet magni? Vero quasi porro ut, esse ullam hic eos praesentium. Vitae, quod.
         </p>
-        <p class="bg-secondary">
+        <p class="bg-secondary bg-gradient">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nulla, minus aperiam nostrum recusandae quos ipsum aliquam quod voluptatem repellat ut libero natus consequatur qui consectetur debitis earum quidem labore!
         </p>
-        <p class="bg-success">
+        <p class="bg-success bg-gradient">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aliquid eum assumenda voluptatum sequi ad voluptatem reiciendis hic fugiat sapiente suscipit non cumque architecto deleniti voluptatibus corrupti, repellat animi consequatur!
         </p>
         <p class="bg-danger">
@@ -30,7 +30,7 @@
         <p class="bg-light">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos reiciendis, consequuntur obcaecati molestiae magnam quibusdam provident fugiat nulla! Molestiae, laborum vitae ipsum illo ad harum culpa ea. Dolor, eaque veritatis.
         </p>
-        <p class="bg-dark">
+        <p class="bg-dark bg-opacity-50 text-white">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda ipsum facilis magni veritatis quis. Corporis at voluptatibus officia asperiores perspiciatis assumenda, repellendus laborum repellat quod dolorem sapiente minima unde pariatur!
         </p>
         <p class="bg-white">
@@ -38,6 +38,9 @@
         </p>
         <p class="bg-transparent">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore tempora cupiditate nostrum odit officia pariatur, optio et iure vero harum consequuntur dolorum, laudantium corporis, dicta sint nulla? Suscipit, maxime? Eos?
+        </p>
+        <p>
+            <a href="#" class="link-danger">link padrao</a>
         </p>
     </div>
 </body>
