projeto bootstrap5-2021 - margens externas e internas

--- a/bootstrap5-2021/aula13/index.html
+++ b/bootstrap5-2021/aula13/index.html
@@ -7,14 +7,30 @@
     <title>margens externas e internas</title>
 </head>
 <body>
+    <!--
+        m => margen dos 4 lados do elemento
+        ms => margem esqueda
+        me => margem direita
+        mt => margem superior
+        mb => margem inferior
+
+        p = padding dos 4 lados do elemento
+        ps => padding da esquerda
+        pe => padding da direita
+        pt => padding superior
+        pb => padding inferior
+
+        px => padding dos lados (eixo x)
+        py => padding superior e inferior (eixo y)
+    -->
     <div class="container">
-        <p class="text-bg-dark mb-5">
+        <p class="text-bg-dark mt-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam soluta laboriosam laborum, doloribus nulla vitae odio quae mollitia asperiores perspiciatis?
         </p>
-        <p class="text-bg-dark m-4 p-3">
+        <p class="text-bg-dark my-5">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, neque? Quidem nihil molestias at unde commodi repudiandae mollitia iusto! Enim.
         </p>
-        <p class="text-bg-dark">
+        <p class="text-bg-dark m-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur at dolor sit accusantium beatae voluptatibus labore suscipit, eveniet voluptates minus.
         </p>
     </div>    
