projeto bootstrap5-2021 - margens externas e internas

--- a/bootstrap5-2021/aula13/index.html
+++ b/bootstrap5-2021/aula13/index.html
@@ -33,6 +33,9 @@
         <p class="text-bg-dark m-0">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur at dolor sit accusantium beatae voluptatibus labore suscipit, eveniet voluptates minus.
         </p>
-    </div>    
+    </div>
+    <div class="container bg-secondary">
+        <div class="bg-primary col-4 p-5 mx-auto"></div>
+    </div>
 </body>
 </html>
