projeto bootstrap5-2021 - laiout de formlarios

--- a/bootstrap5-2021/aula22/index.html
+++ b/bootstrap5-2021/aula22/index.html
@@ -32,6 +32,15 @@
             </div>
             <input type="text" class="form-control" >
         </div>
+        <div class="mb-3 input-group">
+            <span class="input-group-text">$</span>
+            <span class="input-group-text">BRL</span>
+            <input type="text" class="form-control" placeholder="valor" >
+        </div>
+        <div class="mb-3 input-group">
+            <input type="search" class="form-control" >
+            <button class="btn btn-outline-secondary" >buscar</button>
+        </div>
     </div>
 </body>
 </html>
