--- a/bootstrap5-2021/aula23/index.html
+++ b/bootstrap5-2021/aula23/index.html
@@ -30,6 +30,33 @@
                 <input type="email" name="" id="" class="form-control" >
             </div>
         </div>
+        <hr>
+        <h1 class="display-3">Endereço</h1>
+        <form action="">
+            <div class="row mb-3 g-3">
+                <div class="col-7">
+                    <label for="logradouro" class="form-label">logradouro</label>
+                    <input type="text" class="form-control" id="logradouro" >
+                </div>
+                <div class="col-2">
+                    <label for="numero" class="form-label">numero</label>
+                    <input type="text" class="form-control" id="numero">
+                </div>
+                <div class="col-3">
+                    <label for="complemento" class="form-label">complemento</label>
+                    <input type="text" class="form-control" id="complemento" >
+                </div>
+                <div class="col-6">
+                    <label for="bairro" class="form-label">bairro</label>
+                    <input type="text" class="form-control" id="bairro" >
+                </div>
+                <div class="col-6">
+                    <label for="cidade" class="form-label">cidade</label>
+                    <input type="text" class="form-control" id="cidade" >
+                </div>
+            </div>
+            <button class="btn btn-primary">cadastrar</button>
+        </form>
     </div>
 </body>
 </html>
