projeto bootstrap5-2021 - barras de navegacao parte 2

--- a/bootstrap5-2021/aula26/index.html
+++ b/bootstrap5-2021/aula26/index.html
@@ -9,13 +9,56 @@
     <title>barras de navegacao</title>
 </head>
 <body>
-    <nav class="navbar bg-light">
+    <nav class="navbar bg-light navbar-expand-sm sticky-top">
         <div class="container-fluid">
-            <a href="" class="navbar-brand">
+            <a href="" class="navbar-brand d-flex align-items-center">
                 <i class="bi-bootstrap-fill fs-1 me-2"></i>
-                bootstrap 5
+                Bootstrap 5
             </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collpase" data-bs-target="#menuNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="menuNavbar">
+                <div class="navbar-nav">
+                    <a href="#" class="nav-link active">Principal</a>
+                    <a href="#" class="nav-link">Produtos</a>
+                    <a href="#" class="nav-link">Contato</a>
+                    <a href="#" class="nav-link">Sobre</a>
+                </div>
+            </div>
+            <form action="" class="d-flex">
+                <div class="input-group">
+                    <input type="search" name="" id="" class="form-control" placeholder="buscar..." >
+                    <button type="submit" class="btn btn-outline-success">buscar</button>
+                </div>
+            </form>
         </div>
     </nav>
+    <div class="container mt-3">
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+        <p class="lead">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae hic unde provident veritatis non alias nam totam modi. Magnam aliquam suscipit labore atque nam maxime facere ratione nisi officia optio! Voluptas a sed praesentium aliquam odit commodi alias voluptates dolorem error molestias nemo dignissimos placeat consequuntur, illum similique et. Nulla necessitatibus expedita numquam ipsum commodi dolorum nostrum quis ex vitae harum minima, quam saepe maxime voluptas quidem ducimus consequatur adipisci recusandae impedit, reprehenderit optio voluptate, consequuntur tenetur. Non excepturi, aliquid, praesentium voluptas vero minima tenetur ratione consequuntur eius dolores molestias, nesciunt quas hic corporis nam maiores sed odit iste! Error.
+        </p>
+    </div>
+    <footer class="p-4 bg-dark text-light text-center sticky-bottom">
+        Todos os direitos reservados
+    </footer>
 </body>
 </html>
