projeto bootstrap5-2021 - cards parte 2

--- a/bootstrap5-2021/aula27/index.html
+++ b/bootstrap5-2021/aula27/index.html
@@ -10,21 +10,103 @@
 </head>
 <body>
     <div class="container py-5">
-        <div class="card col-4">
-            <img src="https://picsum.photos/400/400" alt="" class="card-img-top" >
-            <h4 class="card-header">Cabeçalho</h4>
-            <div class="card-body">
-                <h5 class="card-title">Titulo do card</h5>
-                <h6 class="card-subtitle">Subtitulo do card</h6>
-                <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odio alias eveniet voluptate et quaerat blanditiis atque corrupti laborum illo, fugiat dignissimos, saepe porro similique. Possimus iste ducimus repellendus animi!
-                </p>
-                <a href="#" class="card-link">link 1</a>
-                <a href="#" class="card-link">link 2</a>
-                <a href="#" class="card-link">link 3</a>
+        <div class="card col-8">
+            <div class="row g-0">
+                <div class="col-4">
+                    <img src="https://picsum.photos/400/400" alt="" class="img-fluid rounded-start w-100" >                    
+                </div>
+                <div class="col-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Titulo do card</h5>
+                        <h6 class="card-subtitle">Subtitulo do card</h6>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odio alias eveniet voluptate et quaerat blanditiis atque corrupti laborum illo, fugiat dignissimos,
+                        </p>
+                        <a href="#" class="card-link">link 1</a>
+                        <a href="#" class="card-link">link 2</a>
+                        <a href="#" class="card-link">link 3</a>
+                    </div>
+                </div>
             </div>
-            <div class="card-footer">
-                Rodape
+        </div>
+        <hr>
+
+        <div class="row row-cols-3 g-3">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://picsum.photos/400/400?random=1" alt="" class="card-img-top" >
+                    <h4 class="card-header">Cabeçalho</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Titulo do card</h5>
+                        <h6 class="card-subtitle">Subtitulo do card</h6>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odio alias evenierepellendus animi!
+                        </p>
+                        <a href="#" class="card-link">link 1</a>
+                        <a href="#" class="card-link">link 2</a>
+                        <a href="#" class="card-link">link 3</a>
+                    </div>
+                    <div class="card-footer">
+                        Rodape
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://picsum.photos/400/400?random=2" alt="" class="card-img-top" >
+                    <h4 class="card-header">Cabeçalho</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Titulo do card</h5>
+                        <h6 class="card-subtitle">Subtitulo do card</h6>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odio alias eveniet voluptate et quaerat blanditiis atque corrupti laborum illo, fugiat dignissimos, saepe porro similique. Possimus iste ducimus repellendus animi!
+                        </p>
+                        <a href="#" class="card-link">link 1</a>
+                        <a href="#" class="card-link">link 2</a>
+                        <a href="#" class="card-link">link 3</a>
+                    </div>
+                    <div class="card-footer">
+                        Rodape
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://picsum.photos/400/400?random=3" alt="" class="card-img-top" >
+                    <h4 class="card-header">Cabeçalho</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Titulo do card</h5>
+                        <h6 class="card-subtitle">Subtitulo do card</h6>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit
+                        </p>
+                        <a href="#" class="card-link">link 1</a>
+                        <a href="#" class="card-link">link 2</a>
+                        <a href="#" class="card-link">link 3</a>
+                    </div>
+                    <div class="card-footer">
+                        Rodape
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://picsum.photos/400/400?random=4" alt="" class="card-img-top" >
+                    <h4 class="card-header">Cabeçalho</h4>
+                    <div class="card-body">
+                        <h5 class="card-title">Titulo do card</h5>
+                        <h6 class="card-subtitle">Subtitulo do card</h6>
+                        <p class="card-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium odio alias eveniet voluptate et quaerat blanditiis atque corrupti laborum illo, fugiat dignissimos, saepe porro similique. Possimus iste ducimus repellendus animi!
+                        </p>
+                        <a href="#" class="card-link">link 1</a>
+                        <a href="#" class="card-link">link 2</a>
+                        <a href="#" class="card-link">link 3</a>
+                    </div>
+                    <div class="card-footer">
+                        Rodape
+                    </div>
+                </div>
             </div>
         </div>
     </div>
