projeto bootstrap5-2021 - alertas

--- a/bootstrap5-2021/aula28/index.html
+++ b/bootstrap5-2021/aula28/index.html
@@ -13,12 +13,13 @@
         <div class="alert alert-primary">
             este é um alerta simples
         </div>
-        <div class="alert alert-danger">
+        <div class="alert alert-danger alert-dismissible fade show">
             <h4 class="alert-heading">
                 <i class="bi-info-circle"></i>
                 Informação
             </h4>
             <p>este é um alerta simples</p>
+            <button class="btn-close" data-bs-dismiss="alert"></button>
             <a href="" class="alert-link">clique aqui</a>
         </div>
     </div>
