--- a/bootstrap5-2021/aula28/index.html
+++ b/bootstrap5-2021/aula28/index.html
@@ -22,6 +22,19 @@
             <button class="btn-close" data-bs-dismiss="alert"></button>
             <a href="" class="alert-link">clique aqui</a>
         </div>
+        <hr>
+        <h2>
+            Exemplo de texto em capsula
+            <span class="badge bg-secondary">novo</span>
+        </h2>
+        <button class="btn btn-primary btn-lg position-relative">
+            Notificações
+            <span class="badge text-bg-danger position-absolute top-0 start-100 translate-middle rounded-pill">5</span>
+        </button>
+        <button class="btn btn-primary btn-lg position-relative ms-4">
+            Notificações
+            <span class="badge text-bg-danger position-absolute top-0 start-100 translate-middle rounded-circle p-2 border border-light"> </span>
+        </button>
     </div>
 </body>
 </html>
