projeto bootstrap5-2021 - listas

--- a/bootstrap5-2021/aula28/index.html
+++ b/bootstrap5-2021/aula28/index.html
@@ -22,6 +22,7 @@
             <button class="btn-close" data-bs-dismiss="alert"></button>
             <a href="" class="alert-link">clique aqui</a>
         </div>
+
         <hr>
         <h2>
             Exemplo de texto em capsula
@@ -35,6 +36,86 @@
             Notificações
             <span class="badge text-bg-danger position-absolute top-0 start-100 translate-middle rounded-circle p-2 border border-light"> </span>
         </button>
+        <hr>
+
+        <div class="list-group">
+            <li class="list-group-item active">item 1</li>
+            <li class="list-group-item">item 2</li>
+            <li class="list-group-item">item 3</li>
+            <li class="list-group-item">item 4</li>
+            <li class="list-group-item">item 5</li>
+        </div>
+
+        <hr>
+        <div class="list-group ">
+            <a href="#" class="list-group-item list-group-item-action">link 1</a>
+            <a href="#" class="list-group-item list-group-item-action">link 2</a>
+            <a href="#" class="list-group-item list-group-item-action">link 3</a>
+            <a href="#" class="list-group-item list-group-item-action">link 4</a>
+            <a href="#" class="list-group-item list-group-item-action">link 5</a>
+        </div>
+
+        <hr>
+        <ol class="list-group list-group-numbered">
+            <li class="list-group-item">item 1</li>
+            <li class="list-group-item">item 2</li>
+            <li class="list-group-item">item 3</li>
+            <li class="list-group-item">item 4</li>
+            <li class="list-group-item">item 5</li>
+        </ol>
+
+        <hr>
+        <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">titulo da noticia</h5>
+                    <small>5 dias a tras</small>
+                </div>
+                <p class="mb-1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, asperiores. Ratione nulla ipsum eum sed qui quasi vitae quidem fuga.
+                </p>
+                <small class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, asperiores.
+                </small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">titulo da noticia</h5>
+                    <small>5 dias a tras</small>
+                </div>
+                <p class="mb-1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, asperiores. Ratione nulla ipsum eum sed qui quasi vitae quidem fuga.
+                </p>
+                <small class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, asperiores.
+                </small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action list-group-item-warning">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">titulo da noticia</h5>
+                    <small>5 dias a tras</small>
+                </div>
+                <p class="mb-1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, asperiores. Ratione nulla ipsum eum sed qui quasi vitae quidem fuga.
+                </p>
+                <small class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, asperiores.
+                </small>
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">
+                <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">titulo da noticia</h5>
+                    <small>5 dias a tras</small>
+                </div>
+                <p class="mb-1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, asperiores. Ratione nulla ipsum eum sed qui quasi vitae quidem fuga.
+                </p>
+                <small class="text-muted">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, asperiores.
+                </small>
+            </a>
+        </div>
+
     </div>
 </body>
 </html>
