projeto bootstrap5-2021 - paineis deslizantes parte 2

--- a/bootstrap5-2021/aula31/index.html
+++ b/bootstrap5-2021/aula31/index.html
@@ -15,11 +15,27 @@
             <a href="#" class="navbar-brand">offcanvas</a>
             <div>
                 <button class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#painel">painel</button>
+                <a href="#painel" class="btn btn-success" data-bs-toggle="offcanvas">painel</a>
             </div>
         </div>
     </div>
 
-    <div class="offcanvas offcanvas-start" id="painel" tabindex="-1">
+    <div class="container">
+        <p class="lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, rerum? Veniam modi numquam adipisci sint iste, provident ex excepturi repellendus exercitationem voluptatibus commodi rerum sunt praesentium a quo dicta deserunt error nihil quas debitis unde eveniet laudantium cumque quibusdam. Quae impedit nostrum dolorem animi assumenda similique explicabo ratione itaque error quo iusto tenetur laborum at magnam ab commodi, sed debitis? Minima, officiis possimus molestiae optio dolore necessitatibus deleniti dolor sunt similique? Adipisci hic asperiores error repudiandae libero illum quasi nemo iusto, magnam fuga alias ullam beatae consequuntur animi corrupti odio esse distinctio tenetur quis impedit veritatis. Voluptas fugiat ipsa iusto illo harum quo soluta, quasi explicabo eveniet cum perspiciatis adipisci non, quas recusandae assumenda consequuntur rem id velit ad! Aspernatur ipsa possimus voluptate. Praesentium in voluptatum aliquid voluptas, mollitia, saepe, repellat reiciendis dignissimos animi ut soluta! Nostrum est minus nobis voluptates, vitae dolor reiciendis quaerat ut porro soluta repellendus voluptatum?
+        </p>
+        <p class="lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam voluptatum officia totam distinctio vero sint, quam atque amet, impedit hic at dolorem sapiente excepturi deleniti enim nam recusandae, delectus eos molestiae laudantium doloremque consequatur officiis assumenda. Maiores odio sapiente deleniti nemo distinctio voluptate dicta perferendis eveniet enim sequi placeat quod expedita atque eum autem beatae esse, rerum repudiandae consequuntur, illum, blanditiis nihil illo praesentium necessitatibus? Porro voluptatum autem iste debitis repudiandae similique nostrum fugiat, minus id praesentium molestias recusandae, placeat vel sequi rerum, maxime cum? Esse nemo, autem provident sequi eaque accusamus, omnis vitae fuga laboriosam quia animi ipsam. Vero perspiciatis recusandae sunt, ut, iure atque sint voluptates vel hic quam cupiditate dolore quos veritatis corrupti numquam sit. Aspernatur, minus iure, sed reiciendis cumque cupiditate recusandae accusantium eveniet architecto magnam tempora dolorum distinctio ipsam laboriosam assumenda. Totam adipisci quidem non autem, sunt molestias obcaecati quod, ex repellendus sapiente ratione?
+        </p>
+        <p class="lead">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure eligendi consequatur placeat! Quia nulla deleniti similique porro possimus est libero, inventore ab reprehenderit? Iste quod suscipit beatae quidem debitis laboriosam pariatur, veritatis expedita incidunt quis cum sed tempore non accusamus, error eos mollitia sunt accusantium? Inventore perspiciatis amet excepturi, quaerat earum impedit, dolore in sapiente ab, eos tempora dicta suscipit voluptas? Tempora, quo, ab aut odio laborum voluptatibus, iure voluptates quos minima labore recusandae obcaecati aliquam? Enim, quaerat dolore? Odio illum sunt, provident, nobis perspiciatis hic, vitae alias suscipit similique accusantium cum laboriosam consequuntur placeat aliquid odit. Incidunt cupiditate, eligendi eos accusamus expedita a architecto molestiae, mollitia, impedit aspernatur pariatur veniam delectus quae reiciendis facere nam esse voluptatem? Rem vel magni consequuntur iure at vitae voluptates dolor quas et obcaecati voluptas veniam tempore pariatur quasi expedita, molestiae, recusandae tempora sequi! Quaerat voluptatibus perspiciatis similique facere amet perferendis maxime, quibusdam reiciendis.
+        </p>
+        <p class="lead">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perspiciatis tempore tempora iste magni, rem exercitationem molestias adipisci iusto tenetur rerum sequi soluta placeat ex dignissimos fugit quod provident atque cupiditate sunt totam ipsa minima. Aperiam quo beatae iusto eaque, nesciunt quam, sequi molestiae ad tempore harum voluptate minus optio! Asperiores repudiandae molestiae molestias obcaecati explicabo? Quasi harum totam vitae obcaecati sit illum consectetur nemo minima deserunt nostrum! Architecto officiis nam modi non aut possimus similique dolorem quibusdam obcaecati sunt reiciendis pariatur deleniti aliquam, eius tempore, sequi fuga voluptatum sed quam, dolor voluptas cupiditate. Reprehenderit voluptate asperiores consequatur minus! Consequatur recusandae cum cupiditate aliquid? Veritatis consectetur, magnam voluptate sunt cumque inventore eaque id nobis illo blanditiis, dolores architecto distinctio sed dignissimos porro nam repellat ipsa corporis. Vitae, maxime praesentium accusantium, asperiores atque non, recusandae modi corrupti unde aut ducimus ea dolores! Maiores sequi natus quia incidunt voluptas repellat, excepturi similique.
+        </p>
+    </div>
+
+    <div class="offcanvas offcanvas-start" id="painel" tabindex="-1" data-bs-scroll="true" >
         <div class="offcanvas-header">
             <h5 class="offcanvas-title">Painel</h5>
             <button class="btn-close" data-bs-dismiss="offcanvas"></button>
@@ -28,6 +44,6 @@
 
         </div>
     </div>
-
+    
 </body>
 </html>
