--- a/bootstrap5-2021/aula32/index.html
+++ b/bootstrap5-2021/aula32/index.html
@@ -22,5 +22,10 @@
             </li>
         </nav>
     </div>
+
+    <hr>
+    <div class="spinner-border text-danger"></div>
+    <div class="spinner-grow text-success"></div>
+
 </body>
 </html>
