projeto bootstrap5-2021 - componente basico barra de progresso

--- a/bootstrap5-2021/aula32/index.html
+++ b/bootstrap5-2021/aula32/index.html
@@ -27,5 +27,10 @@
     <div class="spinner-border text-danger"></div>
     <div class="spinner-grow text-success"></div>
 
+    <hr>
+    <div class="progress">
+        <div class="progress-bar w-75 bg-warning"></div>
+    </div>
+
 </body>
 </html>
