projeto bootstrap5-2021 - componente basico paginacao

--- a/bootstrap5-2021/aula32/index.html
+++ b/bootstrap5-2021/aula32/index.html
@@ -21,16 +21,34 @@
                 <a href="#">seguranca</a>
             </li>
         </nav>
+
+        <hr>
+        <div class="spinner-border text-danger"></div>
+        <div class="spinner-grow text-success"></div>
+    
+        <hr>
+        <div class="progress">
+            <div class="progress-bar w-75 bg-warning"></div>
+        </div>
+    
+        <hr>
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                <a href="#" class="page-link">1</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">2</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">3</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">4</a>
+            </li>
+            <li class="page-item">
+                <a href="#" class="page-link">5</a>
+            </li>
+        </ul>
     </div>
-
-    <hr>
-    <div class="spinner-border text-danger"></div>
-    <div class="spinner-grow text-success"></div>
-
-    <hr>
-    <div class="progress">
-        <div class="progress-bar w-75 bg-warning"></div>
-    </div>
-
 </body>
 </html>
