projeto bootstrap5-2021 - utilitites border width

--- a/bootstrap5-2021/aula34/utilities01.html
+++ b/bootstrap5-2021/aula34/utilities01.html
@@ -29,6 +29,14 @@
         <span class="border-end"></span>
         <span class="border-bottom"></span>
         <span class="border-start"></span>
+        <hr>
+
+        <span class="border border-1"></span>
+        <span class="border border-2"></span>
+        <span class="border border-3"></span>
+        <span class="border border-4"></span>
+        <span class="border border-5"></span>
+
     </div>
 </body>
 </html>
