--- a/bootstrap5-2021/aula34/utilities01.html
+++ b/bootstrap5-2021/aula34/utilities01.html
@@ -36,6 +36,17 @@
         <span class="border border-3"></span>
         <span class="border border-4"></span>
         <span class="border border-5"></span>
+        <hr>
+
+        <span class="border border-primary"></span>
+        <span class="border border-secondary"></span>
+        <span class="border border-success"></span>
+        <span class="border border-danger"></span>
+        <span class="border border-warning"></span>
+        <span class="border border-info"></span>
+        <span class="border border-light"></span>
+        <span class="border border-dark"></span>
+        <span class="border border-white"></span>
 
     </div>
 </body>
