projeto bootstrap5-2021 - utilitites borders

--- a/bootstrap5-2021/aula34/utilities01.html
+++ b/bootstrap5-2021/aula34/utilities01.html
@@ -17,6 +17,8 @@
 </head>
 <body>
     <div class="container">
+
+        <!-- borders -->
         <span class="border"></span>
         <span class="border border-3"></span>
         <span class="border border-top-3"></span>
@@ -31,6 +33,7 @@
         <span class="border-start"></span>
         <hr>
 
+        <!-- border width -->
         <span class="border border-1"></span>
         <span class="border border-2"></span>
         <span class="border border-3"></span>
@@ -38,6 +41,7 @@
         <span class="border border-5"></span>
         <hr>
 
+        <!-- border color -->
         <span class="border border-primary"></span>
         <span class="border border-secondary"></span>
         <span class="border border-success"></span>
